[package]
name = "rust-advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "advent_of_code_2022_rust"
path = "src/lib.rs"

[[bin]]
name = "task_01"
path = "src/bin/task_01.rs"

[dependencies]
